force-app/main/default/objects/BillingContact__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>請求先担当</relationshipLabel>
    <relationshipName>BliingContacts</relationshipName>
    <type>Lookup</type>
</CustomField>