force-app/main/default/objects/BillingContact__c/fields/MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet__c</fullName>
    <label>町名・番地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>