force-app/main/default/objects/BillingContact__c/fields/OrganizationA_ContactId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationA_ContactId__c</fullName>
    <externalId>true</externalId>
    <label>【外部ID】組織A取引先責任者ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>