force-app/main/default/objects/BillingContact__c/listViews/AllBliingContact.listView-meta.xml
<ListView>
    <fullName>AllBliingContact</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Name__c</columns>
    <columns>Primarily__c</columns>
    <columns>AccountName__c</columns>
    <columns>BillingContactID18__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべての請求先担当</label>
</ListView>