force-app/main/default/objects/BillingContact__c/listViews/GM_BliingContact.listView-meta.xml
<ListView>
    <fullName>GM_BliingContact</fullName>
    <filterScope>Queue</filterScope>
    <label>GM</label>
    <queue>GM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>